...
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/floatingActionButton"
        app:backgroundTint="@color/colorPrimary"
        android:onClick="createPoll"/>


    <LinearLayout
        android:orientation="horizontal"
...
