<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="112dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailAnim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <!-- Email Label -->

            <EditText
                android:id="@+id/input_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="Email" />

     </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordAnim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Password Label -->
            <EditText android:id="@+id/input_password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="Password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:background="@color/colorPrimary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:textSize="18sp"
            android:text="Login"
            android:onClick="signIn"/>


        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:text="No account yet? Register here"
            android:gravity="center"
            android:textSize="18sp"
            android:onClick="createUser"/>

    </LinearLayout>
</ScrollView>

